--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,14 @@
             "email": "phucnguyen.snow@gmail.com"
         }
     ],
-    "require": {},
-    "psr-4": {
-        "App\\": "app/",
-        "KyNM\\Simple\\": "vendor/snowsolution/anyconfig/src"
+    "require": {
+        "php": ">=7.0.0"
+    },
+    "homepage": "https://github.com/snowsolutions/anyconfig",
+    "license": "MIT",
+    "autoload": {
+        "psr-4": {
+            "voku\\": "src/"
+        }
     }
 }
