--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "voku\\": "src/"
+            "SnowExpress\\AnyConfig\\": "src/"
         }
     },
     "psr-4": {
         "App\\": "app/",
-        "KyNM\\Simple\\": "vendor/snowsolution/anyconfig/src"
+        "SnowExpress\\AnyConfig\\": "vendor/snowsolution/anyconfig/src"
     },
     "minimum-stability": "dev"
 }
